--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
+    "moment": "^2.30.1",
+    "swiper": "^8.4.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.3"
+    "vue-awesome-swiper": "^5.0.1",
+    "vue-datepicker": "^1.3.0",
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.3.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
