--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "express": "^4.19.2",
     "moment": "^2.30.1",
     "swiper": "^8.4.7",
     "vue": "^3.4.21",
