--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "swiper": "^8.4.7",
-    "vue": "^3.4.21",
+    "vue": "^3.4.31",
     "vue-awesome-swiper": "^5.0.1",
     "vue-datepicker": "^1.3.0",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.3",
+    "vue-lazyload": "^3.0.0",
+    "vue-router": "^4.4.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
