--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "express": "^4.19.2",
+    "lazyload": "^2.0.0-rc.2",
     "moment": "^2.30.1",
     "swiper": "^8.4.7",
     "vue": "^3.4.31",
