--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "test",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "bootstrap-vue": "^2.23.1",
-    "express": "^4.19.2",
-    "lazyload": "^2.0.0-rc.2",
-    "moment": "^2.30.1",
-    "swiper": "^8.4.7",
-    "vue": "^3.4.31",
-    "vue-awesome-swiper": "^5.0.1",
-    "vue-datepicker": "^1.3.0",
-    "vue-i18n": "^9.13.1",
-    "vue-lazyload": "^3.0.0",
-    "vue-router": "^4.4.0",
-    "vuex": "^4.1.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.3.1"
-  }
+	"name": "test",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite --host",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@popperjs/core": "^2.11.8",
+		"axios": "^1.7.2",
+		"bootstrap": "^5.3.3",
+		"bootstrap-icons": "^1.11.3",
+		"bootstrap-vue": "^2.23.1",
+		"express": "^4.19.2",
+		"lazyload": "^2.0.0-rc.2",
+		"moment": "^2.30.1",
+		"swiper": "^8.4.7",
+		"vue": "^3.4.31",
+		"vue-awesome-swiper": "^5.0.1",
+		"vue-datepicker": "^1.3.0",
+		"vue-i18n": "^9.13.1",
+		"vue-lazyload": "^3.0.0",
+		"vue-router": "^4.4.0",
+		"vuex": "^4.1.0"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.0.4",
+		"vite": "^5.3.1"
+	}
 }
