--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"vue": "^3.4.31",
 		"vue-awesome-swiper": "^5.0.1",
 		"vue-datepicker": "^1.3.0",
-		"vue-i18n": "^9.13.1",
+		"vue-i18n": "^10.0.0-beta.5",
 		"vue-lazyload": "^3.0.0",
 		"vue-router": "^4.4.0",
 		"vuex": "^4.1.0"
