--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"vue-i18n": "^10.0.0-beta.5",
 		"vue-lazyload": "^3.0.0",
 		"vue-router": "^4.4.0",
+		"vuejs-loadmore": "^1.0.8",
 		"vuex": "^4.1.0"
 	},
 	"devDependencies": {
